0.83.1
  - dosbox-x.conf is now recognized as the default config
    file name in addition to dosbox.conf (Wengier)
  - Tandy DAC output fixed to slowly ramp last sample to
    zero DC sample (128) when switched off. This fixes
    loud popping (DC offset) problems with Tandy DAC
    sound effects in Prince of Persia. This new behavior
    also seems to match real Tandy 1000 hardware according
    to video captures of it's audio/video outputs while
    playing Prince of Persia on it.
  - Tandy/PCjr 3-voice fixed to respond to I/O port 0xC0
    regardless of 8-bit or 16-bit I/O (fixes Prince of
    Persia).
  - Write-protecting a disk image in IMGMOUNT and BOOT
    commands now supported by putting a leading colon (:)
    before the image file name. Works with disk swapping;
    e.g. "BOOT :C:\DISK1.IMG C:\DISK2.IMG" only write-
    protects C:\DISK1.IMG but not C:\DISK2.IMG. The new
    config option "leading colon write protect image" can
    be used to disable or enable this behavior (Wengier)
  - Support for changing DOSBox-X internal time (Wengier)
  - Support for pipes (|), e.g. "DIR | MORE" should now
    work as expected; it is recommended to set the %TEMP%
    (or %TMP%) environment variable to a writable directory
    inside DOSBox-X before using pipes (Wengier)
  - Improved redirections using "<" or ">" (Wengier)
  - Improved Ctrl+C handling in some commands (Wengier)
  - Improved -get & -set options for the CONFIG command,
    e.g. support for config options with spaces (Wengier)
  - Improved REN (or RENAME) command to support wildcards
    (* and ?) in the source and/or target files (Wengier)
  - Some improvements to commands like MORE & VER (Wengier)
  - Added BREAK, VERIFY and TRUENAME commands as in a real
    DOS system. Type "[command] /?" for help info (Wengier)
  - Implemented FOR command to run a specified command for
    each file in a set of files. Also added LFNFOR command
    to control whether to use long filenames in the FOR